--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
 }
 
+
 :root {
   font-family: "Catamaran", sans-serif;
   font-size: 16px;
@@ -26,6 +27,10 @@ body {
   color: #f5f4f5;
 }
 
+aside {
+  place-content: center;
+}
+
 .container {
   display: grid;
   grid-template-columns: auto 1fr;
@@ -35,6 +40,11 @@ body {
   padding: 0.75rem;
 }
 
+.schedule-container {
+  justify-content: space-between; 
+  margin-bottom: 1rem;
+
+}
 .logo {
   position: absolute;
   top: 0;
